--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "melonjs-typescript-boilerplate",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "main": "src/index.ts",
   "author": "Olivier Biot",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.2",
+    "sass": "^1.64.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
     "vite-plugin-favicons-inject": "^2.2.0",
